--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Simon Frost' Blog
+title: Simon Frost's Blog
 email: simonhfrost@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Simon Frost' Blog
+  Simon Frost's Blog
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
