Update book review post

--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,8 @@ defaults:
       read_time: true
 
 # Build settings
-theme: minimal-mistakes-jekyll
+# theme: minimal-mistakes-jekyll
+theme: minima
 plugins:
   - jekyll-feed
 
