--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Simon Frost's Blog
+title: Simon Frost
 # email: simonhfrost@gmail.com
 # description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://simonfrost.io" # the base hostname & protocol for your site, e.g. http://example.com
 linkedin_username: simonhfrost
-github_username:  simonhfrost
+github_username: simonhfrost
 
 defaults:
   - scope:
@@ -38,7 +38,6 @@ defaults:
 theme: minima
 plugins:
   - jekyll-feed
-
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
