--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Simon Frost
 # email: simonhfrost@gmail.com
 # description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://simonfrost.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://simonfrost.ai" # the base hostname & protocol for your site, e.g. http://example.com
 linkedin_username: simonhfrost
 github_username: simonhfrost
 
